Product Detail spacing issue fix

--- a/html/sass/pages/about.scss
+++ b/html/sass/pages/about.scss
@@ -923,7 +923,7 @@
     }
 }
 
-.joinEmail {
+.joinEmail,.contactFormWrap {
     form {
         .grecaptcha-badge {
             margin-right: 0;
